# Hector-Wave-Cal

./: .copier-answers.yml  .gitignore  404.html  README.md  fit_model.py  fit_model_fake_data.py  index.html  line_list.csv  mkdocs.yml  pca_denoise.py  pyproject.toml  requirements.yaml
.github/workflows/: deploy_docs.yml
docs/: index.md
old/: fit_model_poly_per_fibre.py  line_list_2dfdr.csv
resources/: bad_arc_files.csv  input_files.csv  make_input_file.py
resources/LineLists/: ccd3_CuAr_lines.csv
search/: search_index.json
src/scripts/: twilight_cross_cor.py
workflow/: Snakefile
workflow/scripts/: add_arc_frame.py  add_arc_frame_to_database.py  create_db.py  fit_arc_model_from_command_line.py  fit_arc_model_from_database.py  fit_emission_lines.py  fit_hierarchical_model.py  linear_lst_sq.py  plot_parameters.py  update_wavela_array.py  utils.py
workflow/scripts/old/: add_arc_frame copy.py
workflow/stan_models/: 2d_model  2d_model.hpp  2d_model_QR  2d_model_QR.hpp  2d_model_QR.stan  hierarchical_model  hierarchical_model.hpp  hierarchical_model.stan  new_model  new_model.hpp  new_model.stan  xy_model  xy_model.hpp  xy_model.stan  xy_model_per_slitlet  xy_model_per_slitlet.hpp  xy_model_per_slitlet.stan
