[project]
name = "hector-wave-cal"
description = "Updated wavelength calibration for Hector"
version = "1.0.0"
authors = [
    { name = "Sam Vaughan", email = "sam.vaughan@mq.edu.au" }
]
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "tox"
]